--- a/src/Leagueoflegends.Support/Themes/Units/RiotFoldableIcon.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotFoldableIcon.xaml
@@ -2,21 +2,30 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:units="using:Leagueoflegends.Support.UI.Units">
-  
+
   <Style x:Key="ExpandArrow" TargetType="Path">
+    <Setter Property="VerticalAlignment" Value="Center"/>
     <Setter Property="Fill" Value="#A09B8C"/>
     <Setter Property="Width" Value="10"/>
     <Setter Property="Height" Value="10"/>
+    <Setter Property="Margin" Value="10 5 0 5"/>
     <Setter Property="Stretch" Value="Uniform"/>
     <Setter Property="Data" Value="M10,17L15,12L10,7V17Z"/>
   </Style>
-  
+
+  <Style x:Key="ContentStyle" TargetType="ContentPresenter">
+    <Setter Property="Content" Value="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}"/>
+    <Setter Property="VerticalAlignment" Value="Center"/>
+    <Setter Property="FontWeight" Value="Bold"/>
+    <Setter Property="Margin" Value="5 0 0 0"/>
+  </Style>
+
   <Style TargetType="units:RiotFoldableIcon">
     <Setter Property="Background" Value="Transparent"/>
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="units:RiotFoldableIcon">
-          <Grid x:Name="RootGrid" Background="{TemplateBinding Background}" Width="{TemplateBinding Width}" Height="{TemplateBinding Height}">
+          <Grid x:Name="RootGrid" Background="{TemplateBinding Background}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="CommonStates">
                 <VisualState x:Name="Normal"/>
@@ -61,8 +70,8 @@
               </VisualStateGroup>
             </VisualStateManager.VisualStateGroups>
             <StackPanel Orientation="Horizontal">
-              <Path x:Name="path" Style="{StaticResource ExpandArrow}" VerticalAlignment="Center"/>
-              <ContentPresenter Content="{TemplateBinding Content}" VerticalAlignment="Center"/>
+              <Path x:Name="path" Style="{StaticResource ExpandArrow}"/>
+              <ContentPresenter Style="{StaticResource ContentStyle}" Content="{TemplateBinding Content}"/>
             </StackPanel>
           </Grid>
         </ControlTemplate>
