--- a/src/Leagueoflegends.Support/Themes/Units/RiotFriendGroupItem.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotFriendGroupItem.xaml
@@ -3,6 +3,10 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:units="using:Leagueoflegends.Support.UI.Units">
 
+  <Style x:Key="ItemsPresenterStyle" TargetType="StackPanel">
+    <Setter Property="Margin" Value="0 4 0 0"/>
+  </Style>
+
   <Style TargetType="units:RiotFriendGroupItem">
     <Setter Property="ItemsBindingPath" Value="Children"/>
     <Setter Property="Foreground" Value="#A09B8C"/>
@@ -10,21 +14,10 @@
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="units:RiotFriendGroupItem">
-          <Grid Background="Transparent">
-            <Grid.RowDefinitions>
-              <RowDefinition Height="Auto"/>
-              <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Grid x:Name="PART_Root">
-              <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-              </Grid.ColumnDefinitions>
-              <units:RiotFoldableIcon IsChecked="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Path=IsExpanded}" Margin="10 5 0 5">
-                <TextBlock Text="{Binding Name}" FontWeight="Bold" Margin="5 0 0 0"/>
-              </units:RiotFoldableIcon>
-            </Grid>
-            <StackPanel Grid.Row="1" x:Name="PART_ItemsPanel" Margin="0 4 0 0"/>
-          </Grid>
+          <StackPanel Background="Transparent">
+            <units:RiotFoldableIcon IsChecked="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Mode=TwoWay, Path=IsExpanded}" Content="{Binding Name}"/>
+            <StackPanel x:Name="PART_ItemsPanel" Style="{StaticResource ItemsPresenterStyle}"/>
+          </StackPanel>
         </ControlTemplate>
       </Setter.Value>
     </Setter>
