--- a/src/Leagueoflegends.Support/Themes/Units/RiotFriendItemControl.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotFriendItemControl.xaml
@@ -18,10 +18,16 @@
     <GradientStop Color="#C99D3F" Offset="1"/>
   </LinearGradientBrush>
 
+  <Style x:Key="OverlayStyle" TargetType="Rectangle">
+    <Setter Property="Fill" Value="#11FFFFFF"/>
+    <Setter Property="Opacity" Value="0"/>
+  </Style>
+
   <Style x:Key="CircleFaceStyle" TargetType="Control">
     <Setter Property="BorderBrush" Value="{StaticResource DefaultAvatarBorderBrush}"/>
     <Setter Property="Width" Value="36"/>
     <Setter Property="Height" Value="36"/>
+    <Setter Property="Margin" Value="0 0 2 0"/>
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="Control">
@@ -36,6 +42,25 @@
         </ControlTemplate>
       </Setter.Value>
     </Setter>
+  </Style>
+
+  <Style x:Key="ContentGridStyle" TargetType="Grid">
+    <Setter Property="Margin" Value="10,5,10,5"/>
+  </Style>
+
+  <Style x:Key="ContentStackStyle" TargetType="StackPanel">
+    <Setter Property="Grid.Column" Value="1"/>
+    <Setter Property="Margin" Value="5,0,0,0"/>
+  </Style>
+
+  <Style x:Key="NameStyle" TargetType="TextBlock">
+    <Setter Property="Foreground" Value="#A09B8C"/>
+    <Setter Property="FontSize" Value="13"/>
+  </Style>
+
+  <Style x:Key="StatusStyle" TargetType="TextBlock">
+    <Setter Property="Foreground" Value="#FF5B5A56"/>
+    <Setter Property="FontSize" Value="12"/>
   </Style>
 
   <Style TargetType="units:RiotFriendItemControl">
@@ -57,18 +82,16 @@
                 </VisualState>
               </VisualStateGroup>
             </VisualStateManager.VisualStateGroups>
-
-            <Rectangle x:Name="OverlayRectangle" Fill="#11FFFFFF" Opacity="0"/>
-
-            <Grid Margin="10,5,10,5">
+            <Rectangle x:Name="OverlayRectangle" Style="{StaticResource OverlayStyle}"/>
+            <Grid Style="{StaticResource ContentGridStyle}">
               <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
               </Grid.ColumnDefinitions>
-              <Control x:Name="Avatar" Style="{StaticResource CircleFaceStyle}" Margin="0,0,2,0"/>
-              <StackPanel Grid.Column="1" Margin="5,0,0,0">
-                <TextBlock x:Name="NameText" Text="{Binding Name}" Foreground="#A09B8C" FontSize="13"/>
-                <TextBlock x:Name="StatusText" Text="{Binding Status}" Foreground="#FF5B5A56" FontSize="12"/>
+              <Control x:Name="Avatar" Style="{StaticResource CircleFaceStyle}"/>
+              <StackPanel Style="{StaticResource ContentStackStyle}">
+                <TextBlock x:Name="NameText" Style="{StaticResource NameStyle}" Text="{Binding Name}"/>
+                <TextBlock x:Name="StatusText" Style="{StaticResource StatusStyle}" Text="{Binding Status}"/>
               </StackPanel>
             </Grid>
           </Grid>
