--- a/src/Leagueoflegends.Support/Themes/Units/RiotMatchHistoryListBox.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotMatchHistoryListBox.xaml
@@ -4,6 +4,21 @@
   xmlns:cnvts="using:Leagueoflegends.Support.Local.Converters"
   xmlns:units="using:Leagueoflegends.Support.UI.Units">
 
+  <Style x:Key="HeaderStyle" TargetType="TextBlock">
+    <Setter Property="Text" Value="RECENT GAMES (LAST 20 PLAYED)"/>
+    <Setter Property="Foreground" Value="#F0E6D2"/>
+    <Setter Property="FontSize" Value="16"/>
+    <Setter Property="Margin" Value="20,0,0,0"/>
+  </Style>
+
+  <Style x:Key="ScrollViewerStyle" TargetType="ScrollViewer">
+    <Setter Property="Grid.Row" Value="1"/>
+    <Setter Property="Margin" Value="0,20,0,0"/>
+    <Setter Property="Padding" Value="20 0 0 0"/>
+    <Setter Property="VerticalScrollBarVisibility" Value="Hidden"/>
+    <Setter Property="HorizontalScrollBarVisibility" Value="Disabled"/>
+  </Style>
+
   <Style TargetType="units:RiotMatchHistoryListBox">
     <Setter Property="Template">
       <Setter.Value>
@@ -13,17 +28,8 @@
               <RowDefinition Height="Auto"/>
               <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <TextBlock
-              Text="RECENT GAMES (LAST 20 PLAYED)"
-              Foreground="#F0E6D2"
-              FontSize="16"
-              Margin="20,0,0,0"/>
-            <ScrollViewer
-              Grid.Row="1"
-              Margin="0,20,0,0"
-              Padding="20 0 0 0"
-              VerticalScrollBarVisibility="Hidden"
-              HorizontalScrollBarVisibility="Disabled">
+            <TextBlock Style="{StaticResource HeaderStyle}" Text="RECENT GAMES (LAST 20 PLAYED)"/>
+            <ScrollViewer Style="{StaticResource ScrollViewerStyle}">
               <ItemsPresenter/>
             </ScrollViewer>
           </Grid>
